2003-10-08  John Levon  <levon@movementarian.org>

	* utils/op_help.c: standardise name

	* gui/oprof_start.cpp: Qt 2.3.1 compile fix
	(bug 819943)

2003-10-07  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_kernel.c: memory leak

	* dae/opd_mapping.c:
	* dae/opd_mapping.h:
	* dae/opd_parse_proc.c:
	* dae/opd_proc.c: 
	* dae/opd_proc.h: use a list of struct opd_map instead of an array,
	  remove last_map optimization.

	* dae/oprofiled.c: memory leak
	
	* libutil/op_cpufreq.c: memory leak, FILE* leak
	* libutil/op_list.h: fix @author

2003-10-06  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/oprofiled.c:
	* dae/opd_proc.h:
	* dae/opd_proc.c: use struct list_head to chain opd_proc struct in hash
	  table

	* utils/op_help.c: comment fix

2003-10-06  John Levon  <levon@movementarian.org>

	* utils/opcontrol: work around 2.6 daemon's signal
	handling race that could cause it to hang during
	a --shutdown

2003-10-05  Philippe Elie  <phil.el@wanadoo.fr>

	* events/i386/p4/events:
	* events/i386/p4-ht/events: put GLOBAL_POWER_EVENTS on top

	* events/i386/pii/unit_masks:
	* events/i386/piii/unit_masks: typo in help string

	* utils/op_help.c: show "counter: all" instead an enumeration of all
	  counter

2003-10-02  Philippe Elie  <phil.el@wanadoo.fr>

	* events/*.events *.unit_masks: move these files to subdir named
	  arch/processor_name/events and arch/processor_name/unit_masks
	* events/Makefile.am: update according
	
	* libop/op_events.c: now it's safe to allow loading events file from a
	  directory provided through environment var OPROFILE_EVENTS_FILE_DIR
	* libop/tests/alloc_counter_tests.c: use it
	* libop/tests/load_events_files_tests.c: use it

2003-10-02  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_events.c: revert last commit (allowed to find events files
	  description directory in alternate directory)

	* libop/tests/Makefile.am:
	* libop/tests/load_events_files_tests.c: new files. Validate events
	  description file by loading them.
