@@ -1,3 +1,8 @@
+2003-10-09  John Levon  <levon@movementarian.org>
+
+	* doc/oprofile.xml: document "no results" and
+	how to fix it
+
 2003-10-08  John Levon  <levon@movementarian.org>
 
 	* utils/op_help.c: standardise name
